2010-08-09 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.27
	* fixed string comparison problem caused since 0.9.6h

2010-08-05 j.m.reneau <renejm@users.sourceforge.net> 0.9.6z
	* Rewrote the error messaging process to allow for error trapping and reporting logic in BASIC code
	* added ONERROR label to jump to a subroutine to handle errors
	* added LASTERROR, LASTERRORMESSAGE, LASTERRORLINE, and LASTERROREXTRA functions that describe last runtime error
	* added OFFERROR statement to restore default error handling - fail on error
	* changed parser to allow labels at the begining of any line or on a line by themselves
	* added display of column number of cursor in status bar when editing
	* added _ as a valid character in a veriable or label name (first letter MUST still be a letter)

2010-08-02 j.m.reneau <renejm@users.sourceforge.net> 0.9.6y
	* Added sqLite database processing - dbopen, dbclose, dbsetopen, dbsetclose, and dbexecute statements.
		also dbint, dbfloat, dbstring, and dbrow functions to manipulate recordsets

2010-07-27 j.m.reneau <renejm@users.sourceforge.net> 0.9.6x
	* left alen, alenx, and aleny in lex files when adding 2d and redim of arrays - unused - removed

2010-07-26 j.m.reneau <renejm@users.sourceforge.net> 0.9.6w
	* added decimal statemene to define maximum number of decimal places to display
          (full precision of a double is still being maintained behind the scenes)
	* fixed web site on about box
	* added recent new statements to syntax highliter

2010-07-20 j.m.reneau <renejm@users.sourceforge.net> 0.9.6v
	* fixed several gramatical errors with file messages - thanks joel
	* removed maximum size of graphical output widget

2010-07-13 j.m.reneau <renejm@users.sourceforge.net> 0.9.6u
	* fixed wavwait logic for compile under Win32.  Also noticed in the QSound documentation
	  that wavwait will not work under Windows because of a quirk with the library.
	* made the graphics and text output so that they may float
